--- a/index.html
+++ b/index.html
@@ -58,6 +58,48 @@
     </div>
   </section>
 
+  <section class="services" id="services">
+    <div class="about-container container">
+      <h2>Our Services</h2>
+      <div class="service">
+        <!-- <img src="service1.jpg" alt="Service 1"> -->
+        <h3>Personal Injury</h3>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus varius. Proin eu ligula non velit venenatis semper."</p>
+      </div>
+      <div class="service">
+        <!-- <img src="service2.jpg" alt="Service 2"> -->
+        <h3>Criminal Defense</h3>
+        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae nec turpis."</p>
+      </div>
+      <div class="service">
+        <!-- <img src="service3.jpg" alt="Service 3"> -->
+        <h3>Family Law</h3>
+        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur, id placerat dui posuere."</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="opinions" id="opinions">
+    <div class="about-container container">
+      <h2>Client Opinions</h2>
+      <div class="opinion">
+        <!-- <img src="client1.png" alt="Client 1"> -->
+        <h3>John Doe</h3>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus varius. Proin eu ligula non velit venenatis semper."</p>
+      </div>
+      <div class="opinion">
+        <!-- <img src="client2.jpg" alt="Client 2"> -->
+        <h3>Jane Smith</h3>
+        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae nec turpis."</p>
+      </div>
+      <div class="opinion">
+        <!-- <img src="client3.jpg" alt="Client 3"> -->
+        <h3>David Williams</h3>
+        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur, id placerat dui posuere."</p>
+      </div>
+    </div>
+  </section>
+
   <section class="contact" id="contact">
     <div class="container">
       <h1>Contact</h1>
