commit 2 on master

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li class="navbar-item"><a class="navbar-link" href="#home">HOME</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#about">ABOUT</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#services">SERVICES</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#opinions">OPINIONS</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#contact">CONTACT</a></li>
         </ul>
       </div>
@@ -59,8 +60,8 @@
   </section>
 
   <section class="services" id="services">
-    <div class="about-container container">
-      <h2>Our Services</h2>
+    <div class="services-container container">
+      <h1>Services</h1>
       <div class="service">
         <!-- <img src="service1.jpg" alt="Service 1"> -->
         <h3>Personal Injury</h3>
@@ -81,7 +82,7 @@
 
   <section class="opinions" id="opinions">
     <div class="about-container container">
-      <h2>Client Opinions</h2>
+      <h1>Opinions</h1>
       <div class="opinion">
         <!-- <img src="client1.png" alt="Client 1"> -->
         <h3>John Doe</h3>
