upd: contact session

--- a/index2.html
+++ b/index2.html
@@ -125,20 +125,6 @@
 
     <section class="contact" id="contact">
       <div class="contact-container container">
-        <!-- <div class="section-title">
-          <h1>Contact</h1>
-        </div> -->
-        <div class="social-media">
-          <a href="#" class="social-media-link">
-            <i class="fa-brands fa-square-whatsapp"></i>
-          </a>
-          <a href="#" class="social-media-link">
-            <i class="fab fa-instagram-square"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/bernardoknoblauch/" class="social-media-link">
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </div>
         <form class="form">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" placeholder="Enter your name">
@@ -150,6 +136,38 @@
             <input class="btn" type="submit" value="ENVIAR"></input>
           </div>
         </form>
+        <div class="direct-contact-container">
+
+          <ul class="contact-list">
+            <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">City,
+                  State</span></i></li>
+
+            <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a
+                    href="tel:1-212-555-5555" title="Give me a call">(212) 555-2368</a></span></i></li>
+
+            <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#"
+                    title="Send me an email">hitmeup@gmail.com</a></span></i></li>
+          </ul>
+
+          <hr>
+          <ul class="social-media-list">
+            <li><a href="#" target="_blank" class="contact-icon">
+                <i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li><a href="#" target="_blank" class="contact-icon">
+                <i class="fa fa-codepen" aria-hidden="true"></i></a>
+            </li>
+            <li><a href="#" target="_blank" class="contact-icon">
+                <i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li><a href="#" target="_blank" class="contact-icon">
+                <i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </li>
+          </ul>
+          <hr>
+        </div>
+
+      </div>
       </div>
     </section>
   </main>
