--- a/index2.html
+++ b/index2.html
@@ -50,18 +50,19 @@
 
   <main>
     <section class="hero" id="home">
+      <img src="./images/hero.jpeg" alt="Description of the image" width="100%"  height="200">
       <div class="hero-container container">
-        <h1>Experienced Lawyer</h1>
-        <p>Providing legal services for all your needs</p>
+        <h1>Advocacia Previdenciária Especializada em ações contra o INSS, aposentadorias, benefícios, pensões, auxílios e tudo mais relacionado à previdência.</h1>
+        <p>Estamos aqui em busca de promover maior segurança nas pessoas através de uma advocacia humana, acessível e personalizada. Atuação em todo Brasil e Exterior.</p>
         <div class="hero-buttons">
-          <a href="#services" class="btn">Learn More</a>
+          <a href="#services" class="btn">FALAR COM UM ESPECIALISTA</a>
         </div>
       </div>
     </section>
 
 
 
-    <section class="about" id="about">
+    <!-- <section class="about" id="about">
       <div class="about-container container">
         <h1>About Me</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -72,56 +73,50 @@
         <a href="#services" class="btn">Learn More</a>
       </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="services" id="services">
+    <!-- <section class="services" id="services">
       <div class="services-container container">
         <h1 class="section-title">Services</h1>
         <div class="service">
-          <!-- <img src="service1.jpg" alt="Service 1"> -->
           <h3>Personal Injury</h3>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod
             metus varius. Proin eu ligula non velit venenatis semper."</p>
         </div>
         <div class="service">
-          <!-- <img src="service2.jpg" alt="Service 2"> -->
           <h3>Criminal Defense</h3>
           <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
             nec turpis."</p>
         </div>
         <div class="service">
-          <!-- <img src="service3.jpg" alt="Service 3"> -->
           <h3>Family Law</h3>
           <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo
             consectetur, id placerat dui posuere."</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
-
+<!-- 
     <section class="opinions" id="opinions">
       <div class="opinions-container container">
         <h1 class="section-title">Opinions</h1>
         <div class="opinion">
-          <!-- <img src="client1.png" alt="Client 1"> -->
           <h3>John Doe</h3>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod
             metus varius. Proin eu ligula non velit venenatis semper."</p>
         </div>
         <div class="opinion">
-          <!-- <img src="client2.jpg" alt="Client 2"> -->
           <h3>Jane Smith</h3>
           <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
             nec turpis."</p>
         </div>
         <div class="opinion">
-          <!-- <img src="client3.jpg" alt="Client 3"> -->
           <h3>David Williams</h3>
           <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo
             consectetur, id placerat dui posuere."</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="contact" id="contact">
       <div class="contact-container container">
