upd: layout and colors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Isadora Aran</title>
 </head>
@@ -44,13 +44,14 @@
 
   <section class="hero" id="home">
     <div class="container">
-      <h1>Experienced Lawyer</h1>
-      <p>Providing legal services for all your needs</p>
+      <h1>Advocacia Previdenciária Especializada em ações contra o INSS, aposentadorias, benefícios, pensões, auxílios e
+        tudo mais relacionado à previdência.</h1>
+      <p>Estamos aqui em busca de promover maior segurança nas pessoas através de uma advocacia humana, acessível e
+        personalizada. Atuação em todo Brasil e Exterior.</p>
       <div class="hero-buttons">
-        <a href="#services" class="btn">Learn More</a>
-        <a class="btn-wpp"  href="#home">MENSAGEM
+        <a class="btn-wpp" href="#home">
           <i class="fa-brands fa-whatsapp"></i>
-        </a>
+          FALAR COM UM ESPECIALISTA</a>
       </div>
     </div>
   </section>
@@ -58,37 +59,43 @@
   <section class="about" id="about">
     <div class="about-container container">
       <div class="card-one">
-        <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur.
+        <h1>O ESCRITÓRIO</h1>
+        <p>
+          O Escritório Tavares & Assis – Sociedade de Advogadas atua de forma especializada na área previdenciária,
+          destacando-se pelo perfil ético, transparente, totalmente humanizado e personalizado. Com experiência nas
+          esferas administrativa e judicial, o nosso objetivo é buscar o melhor benefício para o cliente e defender o
+          melhor cenário para a sua aposentadoria, adquirindo credibilidade e sucesso nas causas que conduzimos. Ética,
+          transparência e eficiência são predicados que destacamos em nossa atuação. Confiamos na segurança que nosso
+          trabalho traz e sabemos o que nosso papel é facilitar a vida dos nossos clientes.
         </p>
         <a href="#services" class="btn">Learn More</a>
       </div>
-      <div class="card-two">
+      <!-- <div class="card-two">
         <div class="square"></div>
-      </div>
+      </div> -->
     </div>
   </section>
 
   <section class="services" id="services">
     <div class="services-container container">
-      <h1 class="section-title">Services</h1>
+      <h1 class="section-title">NOSSOS SERVIÇOS</h1>
       <div class="service">
         <!-- <img src="service1.jpg" alt="Service 1"> -->
         <h3>Personal Injury</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus varius. Proin eu ligula non velit venenatis semper."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus
+          varius. Proin eu ligula non velit venenatis semper."</p>
       </div>
       <div class="service">
         <!-- <img src="service2.jpg" alt="Service 2"> -->
         <h3>Criminal Defense</h3>
-        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae nec turpis."</p>
+        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
+          nec turpis."</p>
       </div>
       <div class="service">
         <!-- <img src="service3.jpg" alt="Service 3"> -->
         <h3>Family Law</h3>
-        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur, id placerat dui posuere."</p>
+        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur,
+          id placerat dui posuere."</p>
       </div>
     </div>
   </section>
@@ -98,17 +105,20 @@
       <div class="opinion">
         <!-- <img src="client1.png" alt="Client 1"> -->
         <h3>John Doe</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus varius. Proin eu ligula non velit venenatis semper."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus
+          varius. Proin eu ligula non velit venenatis semper."</p>
       </div>
       <div class="opinion">
         <!-- <img src="client2.jpg" alt="Client 2"> -->
         <h3>Jane Smith</h3>
-        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae nec turpis."</p>
+        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
+          nec turpis."</p>
       </div>
       <div class="opinion">
         <!-- <img src="client3.jpg" alt="Client 3"> -->
         <h3>David Williams</h3>
-        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur, id placerat dui posuere."</p>
+        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur,
+          id placerat dui posuere."</p>
       </div>
     </div>
   </section>
@@ -116,7 +126,7 @@
   <section class="contact" id="contact">
     <div class="contact-container container">
       <div class="section-title">
-        <h1>Contact</h1>
+        <h1>CONTATO</h1>
 
       </div>
       <div class="social-media">
@@ -131,25 +141,26 @@
         </a>
       </div>
       <form class="form">
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name" placeholder="Enter your name">
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email" placeholder="Enter your email">
-				<label for="message">Message:</label>
-				<textarea id="message" name="message" placeholder="Enter your message"></textarea>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" placeholder="Enter your message"></textarea>
         <div style="text-align:center">
           <input class="btn" type="submit" value="ENVIAR"></input>
         </div>
-			</form>
+      </form>
     </div>
   </section>
 
   <section class="footer">
     <div class="footer-container container">
-          <p class="copyright">Copyright &copy; BEKNO 2021.
-             <br> All rights reserved.</p>
-        </div>
-      </section>
+      <p class="copyright">Copyright &copy; BEKNO 2021.
+        <br> All rights reserved.
+      </p>
+    </div>
+  </section>
 
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/b9963ccbdf.js" crossorigin="anonymous"></script>
