upd: lots of ****

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <section class="about" id="about">
     <div class="about-container container">
-      <div class="card-one">
+        <h3>QUEM SOMOS</h3>
         <h1>O ESCRITÓRIO</h1>
         <p>
           O Escritório Tavares & Assis – Sociedade de Advogadas atua de forma especializada na área previdenciária,
@@ -68,8 +68,7 @@
           transparência e eficiência são predicados que destacamos em nossa atuação. Confiamos na segurança que nosso
           trabalho traz e sabemos o que nosso papel é facilitar a vida dos nossos clientes.
         </p>
-        <a href="#services" class="btn">Learn More</a>
-      </div>
+        <!-- <a href="#services" class="btn">Learn More</a> -->
       <!-- <div class="card-two">
         <div class="square"></div>
       </div> -->
@@ -78,12 +77,32 @@
 
   <section class="services" id="services">
     <div class="services-container container">
+      <h1 class="section-title">COMO ATUAMOS</h1>
+      <div class="service">
+        <!-- <img src="service1.jpg" alt="Service 1"> -->
+        <h3>Responsabilidade</h3>
+        <p>Respeitamos cada história que chega até nós. Por isso, trabalhamos com zelo, dedicação e responsabilidade, a fim de encontrarmos uma solução que lhe garanta uma vida digna e tranquila.</p>
+      </div>
+      <div class="service">
+        <!-- <img src="service2.jpg" alt="Service 2"> -->
+        <h3>Experiência</h3>
+        <p>Estamos preparadas para te ajudar em qualquer situação previdenciária. Sabemos exatamente o que fazer para garantir o melhor benefício para você.</p>
+      </div>
+      <div class="service">
+        <!-- <img src="service3.jpg" alt="Service 3"> -->
+        <h3>Paciência</h3>
+        <p>Não se preocupe, embora o Direito Previdenciário seja complexo, nós iremos te explicar todo o processo com muita paciência e tirar todas as suas dúvidas.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="services" id="services">
+    <div class="services-container container">
       <h1 class="section-title">NOSSOS SERVIÇOS</h1>
       <div class="service">
         <!-- <img src="service1.jpg" alt="Service 1"> -->
-        <h3>Personal Injury</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus
-          varius. Proin eu ligula non velit venenatis semper."</p>
+        <h3>Planejamento de aposentadoria</h3>
+        <p>O planejamento de aposentadoria é indicado para aquelas pessoas que desejam saber qual o melhor momento para se aposentar e quanto será a renda. Tudo isso voltado a minimizar os custos financeiros, evitar atrasos na análise do pedido, e, é claro, objetivando o melhor benefício</p>
       </div>
       <div class="service">
         <!-- <img src="service2.jpg" alt="Service 2"> -->
@@ -100,33 +119,33 @@
     </div>
   </section>
 
-  <section class="opinions" id="opinions">
+  <!-- <section class="opinions" id="opinions">
     <div class="opinions-container container">
       <div class="opinion">
-        <!-- <img src="client1.png" alt="Client 1"> -->
+         <img src="client1.png" alt="Client 1"> 
         <h3>John Doe</h3>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus
           varius. Proin eu ligula non velit venenatis semper."</p>
       </div>
       <div class="opinion">
-        <!-- <img src="client2.jpg" alt="Client 2"> -->
+         <img src="client2.jpg" alt="Client 2"> 
         <h3>Jane Smith</h3>
         <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
           nec turpis."</p>
       </div>
       <div class="opinion">
-        <!-- <img src="client3.jpg" alt="Client 3"> -->
+         <img src="client3.jpg" alt="Client 3"> 
         <h3>David Williams</h3>
         <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur,
           id placerat dui posuere."</p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="contact" id="contact">
     <div class="contact-container container">
       <div class="section-title">
-        <h1>CONTATO</h1>
+        <h1>ENTRE EM CONTATO</h1>
 
       </div>
       <div class="social-media">
