upd: como atuamos section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
     <div class="about-container container">
         <h3>QUEM SOMOS</h3>
         <h1>O ESCRITÓRIO</h1>
+        <div class="scale">
+          <hr> 
+          <img src="./icons/scale.svg" alt="Service 1">
+          <hr>
+        </div>
+        
         <p>
-          O Escritório Tavares & Assis – Sociedade de Advogadas atua de forma especializada na área previdenciária,
+          O Escritório – Sociedade de Advogadas atua de forma especializada na área previdenciária,
           destacando-se pelo perfil ético, transparente, totalmente humanizado e personalizado. Com experiência nas
           esferas administrativa e judicial, o nosso objetivo é buscar o melhor benefício para o cliente e defender o
           melhor cenário para a sua aposentadoria, adquirindo credibilidade e sucesso nas causas que conduzimos. Ética,
@@ -74,22 +80,23 @@
       </div> -->
     </div>
   </section>
+  
 
   <section class="services" id="services">
     <div class="services-container container">
       <h1 class="section-title">COMO ATUAMOS</h1>
       <div class="service">
-        <!-- <img src="service1.jpg" alt="Service 1"> -->
+        <img src="./icons/handshake.svg" alt="Service 1">
         <h3>Responsabilidade</h3>
         <p>Respeitamos cada história que chega até nós. Por isso, trabalhamos com zelo, dedicação e responsabilidade, a fim de encontrarmos uma solução que lhe garanta uma vida digna e tranquila.</p>
       </div>
       <div class="service">
-        <!-- <img src="service2.jpg" alt="Service 2"> -->
+        <img src="./icons/champion.svg" alt="Service 1">
         <h3>Experiência</h3>
         <p>Estamos preparadas para te ajudar em qualquer situação previdenciária. Sabemos exatamente o que fazer para garantir o melhor benefício para você.</p>
       </div>
       <div class="service">
-        <!-- <img src="service3.jpg" alt="Service 3"> -->
+        <img src="./icons/clock.svg" alt="Service 1">
         <h3>Paciência</h3>
         <p>Não se preocupe, embora o Direito Previdenciário seja complexo, nós iremos te explicar todo o processo com muita paciência e tirar todas as suas dúvidas.</p>
       </div>
@@ -145,7 +152,7 @@
   <section class="contact" id="contact">
     <div class="contact-container container">
       <div class="section-title">
-        <h1>ENTRE EM CONTATO</h1>
+        <h1>CONTATO</h1>
 
       </div>
       <div class="social-media">
