--- a/index.html
+++ b/index.html
@@ -58,47 +58,62 @@
 
   <section class="about" id="about">
     <div class="about-container container">
-        <h3>QUEM SOMOS</h3>
-        <h1>O ESCRITÓRIO</h1>
-        <div class="scale">
-          <hr> 
-          <img src="./icons/scale.svg" alt="Service 1">
-          <hr>
-        </div>
-        
-        <p>
-          O Escritório – Sociedade de Advogadas atua de forma especializada na área previdenciária,
-          destacando-se pelo perfil ético, transparente, totalmente humanizado e personalizado. Com experiência nas
-          esferas administrativa e judicial, o nosso objetivo é buscar o melhor benefício para o cliente e defender o
-          melhor cenário para a sua aposentadoria, adquirindo credibilidade e sucesso nas causas que conduzimos. Ética,
-          transparência e eficiência são predicados que destacamos em nossa atuação. Confiamos na segurança que nosso
-          trabalho traz e sabemos o que nosso papel é facilitar a vida dos nossos clientes.
-        </p>
-        <!-- <a href="#services" class="btn">Learn More</a> -->
-      <!-- <div class="card-two">
-        <div class="square"></div>
-      </div> -->
+      <h3>QUEM SOMOS</h3>
+      <h1>O ESCRITÓRIO</h1>
+      <div class="scale">
+        <hr>
+        <img src="./icons/scale.svg" alt="Service 1">
+        <hr>
+      </div>
+      <p>
+        O Escritório – Sociedade de Advogadas atua de forma especializada na área previdenciária,
+        destacando-se pelo perfil ético, transparente, totalmente humanizado e personalizado. Com experiência nas
+        esferas administrativa e judicial, o nosso objetivo é buscar o melhor benefício para o cliente e defender o
+        melhor cenário para a sua aposentadoria, adquirindo credibilidade e sucesso nas causas que conduzimos. Ética,
+        transparência e eficiência são predicados que destacamos em nossa atuação. Confiamos na segurança que nosso
+        trabalho traz e sabemos o que nosso papel é facilitar a vida dos nossos clientes.
+      </p>
     </div>
   </section>
-  
+
+  <section class="about" id="about">
+    <div class="about-container container">
+      <h1>ISADORA ARAN</h1>
+      <div class="scale">
+        <hr>
+        <img src="./icons/scale.svg" alt="Service 1">
+        <hr>
+      </div>
+      <div class="picture">
+        <img src="./images/FotoAlice.jpg" alt="">
+      </div>
+      <p style="max-width: 500px;">
+        Especialista e amante do Direito Previdenciário. O grande apreço e admiração por essa área nos
+        uniu e hoje atuamos firmemente no previdenciário, com respeito e cuidado por cada história que chega até nós.
+      </p>
+    </div>
+  </section>
 
   <section class="services" id="services">
     <div class="services-container container">
-      <h1 class="section-title">COMO ATUAMOS</h1>
+      <h1 class="section-title">COMO TRABALHAMOS</h1>
       <div class="service">
         <img src="./icons/handshake.svg" alt="Service 1">
         <h3>Responsabilidade</h3>
-        <p>Respeitamos cada história que chega até nós. Por isso, trabalhamos com zelo, dedicação e responsabilidade, a fim de encontrarmos uma solução que lhe garanta uma vida digna e tranquila.</p>
+        <p>Respeitamos cada história que chega até nós. Por isso, trabalhamos com zelo, dedicação e responsabilidade, a
+          fim de encontrarmos uma solução que lhe garanta uma vida digna e tranquila.</p>
       </div>
       <div class="service">
         <img src="./icons/champion.svg" alt="Service 1">
         <h3>Experiência</h3>
-        <p>Estamos preparadas para te ajudar em qualquer situação previdenciária. Sabemos exatamente o que fazer para garantir o melhor benefício para você.</p>
+        <p>Estamos preparadas para te ajudar em qualquer situação previdenciária. Sabemos exatamente o que fazer para
+          garantir o melhor benefício para você.</p>
       </div>
       <div class="service">
         <img src="./icons/clock.svg" alt="Service 1">
         <h3>Paciência</h3>
-        <p>Não se preocupe, embora o Direito Previdenciário seja complexo, nós iremos te explicar todo o processo com muita paciência e tirar todas as suas dúvidas.</p>
+        <p>Não se preocupe, embora o Direito Previdenciário seja complexo, nós iremos te explicar todo o processo com
+          muita paciência e tirar todas as suas dúvidas.</p>
       </div>
     </div>
   </section>
@@ -109,7 +124,9 @@
       <div class="service">
         <!-- <img src="service1.jpg" alt="Service 1"> -->
         <h3>Planejamento de aposentadoria</h3>
-        <p>O planejamento de aposentadoria é indicado para aquelas pessoas que desejam saber qual o melhor momento para se aposentar e quanto será a renda. Tudo isso voltado a minimizar os custos financeiros, evitar atrasos na análise do pedido, e, é claro, objetivando o melhor benefício</p>
+        <p>O planejamento de aposentadoria é indicado para aquelas pessoas que desejam saber qual o melhor momento para
+          se aposentar e quanto será a renda. Tudo isso voltado a minimizar os custos financeiros, evitar atrasos na
+          análise do pedido, e, é claro, objetivando o melhor benefício</p>
       </div>
       <div class="service">
         <!-- <img src="service2.jpg" alt="Service 2"> -->
