--- a/index.html
+++ b/index.html
@@ -96,7 +96,14 @@
 
   <section class="services" id="services">
     <div class="services-container container">
-      <h1 class="section-title">COMO TRABALHAMOS</h1>
+      <div class="heading">
+        <h1>COMO TRABALHAMOS</h1>
+        <div class="scale">
+          <hr>
+          <img src="./icons/scale.svg" alt="Service 1">
+          <hr>
+        </div>
+      </div>
       <div class="service">
         <img src="./icons/handshake.svg" alt="Service 1">
         <h3>Responsabilidade</h3>
@@ -120,57 +127,47 @@
 
   <section class="services" id="services">
     <div class="services-container container">
-      <h1 class="section-title">NOSSOS SERVIÇOS</h1>
+      <div class="heading">
+        <h1>NOSSOS SERVIÇOS</h1>
+        <div class="scale">
+          <hr>
+          <img src="./icons/scale.svg" alt="Service 1">
+          <hr>
+        </div>
+      </div>
       <div class="service">
-        <!-- <img src="service1.jpg" alt="Service 1"> -->
-        <h3>Planejamento de aposentadoria</h3>
+        <img src="./icons/money_bag.svg" alt="Service 1" style="width: 45px; height: auto; padding: 20px 0;">
+        <h3>Planejamento de Aposentadoria</h3>
         <p>O planejamento de aposentadoria é indicado para aquelas pessoas que desejam saber qual o melhor momento para
           se aposentar e quanto será a renda. Tudo isso voltado a minimizar os custos financeiros, evitar atrasos na
-          análise do pedido, e, é claro, objetivando o melhor benefício</p>
+          análise do pedido, e, é claro, objetivando o melhor benefício.</p>
       </div>
       <div class="service">
-        <!-- <img src="service2.jpg" alt="Service 2"> -->
-        <h3>Criminal Defense</h3>
-        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
-          nec turpis."</p>
+        <img src="./icons/target.svg" alt="Service 1">
+        <h3>Pedidos de aposentadoria</h3>
+        <p>O tão sonhado momento de pedir a aposentadoria chegou! Em razão disso, deve ser feita uma atenta e minuciosa
+          análise documental, visando efetuar um requerimento completo, de modo que o benefício seja concedido tão logo
+          que possível.</p>
       </div>
       <div class="service">
-        <!-- <img src="service3.jpg" alt="Service 3"> -->
-        <h3>Family Law</h3>
-        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur,
-          id placerat dui posuere."</p>
+        <img src="./icons/paper_search.svg" alt="Service 1">
+        <h3>Revisões de Benefícios </h3>
+        <p>Frequentemente o INSS concede benefícios com valores errados. Por isso, se você já recebeu algum benefício e
+          acredita que o valor está equivocado, nosso trabalho é realizar uma detalhada análise do seu caso, para
+          identificar o que precisa ser revisado, e, por consequência, aumentar o valor do benefício.</p>
       </div>
     </div>
   </section>
-
-  <!-- <section class="opinions" id="opinions">
-    <div class="opinions-container container">
-      <div class="opinion">
-         <img src="client1.png" alt="Client 1"> 
-        <h3>John Doe</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis ex id lacus viverra, eu euismod metus
-          varius. Proin eu ligula non velit venenatis semper."</p>
-      </div>
-      <div class="opinion">
-         <img src="client2.jpg" alt="Client 2"> 
-        <h3>Jane Smith</h3>
-        <p>"Fusce nec augue in lectus venenatis eleifend nec et felis. Sed vitae sapien id est dictum vestibulum vitae
-          nec turpis."</p>
-      </div>
-      <div class="opinion">
-         <img src="client3.jpg" alt="Client 3"> 
-        <h3>David Williams</h3>
-        <p>"Pellentesque rutrum finibus urna, a tristique ex consequat non. Sed tincidunt ante vitae justo consectetur,
-          id placerat dui posuere."</p>
-      </div>
-    </div>
-  </section> -->
 
   <section class="contact" id="contact">
     <div class="contact-container container">
       <div class="section-title">
         <h1>CONTATO</h1>
-
+      </div>
+      <div class="scale">
+        <hr>
+        <img src="./icons/scale.svg" alt="Service 1">
+        <hr>
       </div>
       <div class="social-media">
         <a href="#" class="social-media-link">
