--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
       </button>
       <div id="navbar-menu" aria-labelledby="navbar-toggle">
         <ul class="navbar-links">
-          <li class="navbar-item"><a class="navbar-link" href="#home">HOME</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#about">ABOUT</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#services">SERVICES</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#opinions">OPINIONS</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#contact">CONTACT</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#home">INICIO</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#about">SOBRE</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#services">SERVIÇOS</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#contact">CONTATO</a></li>
           <li class="navbar-item">
             <a class="navbar-link" id="wpp" href="#home">WHATSAPP
               <i class="fa-brands fa-whatsapp" style="padding-left: 20px; color: green; font-size: 30px;"></i>
@@ -85,7 +84,7 @@
         <hr>
       </div>
       <div class="picture">
-        <img src="./images/FotoAlice.jpg" alt="">
+        <img src="./images/FotoIsa.jpg" alt="">
       </div>
       <p style="max-width: 500px;">
         Especialista e amante do Direito Previdenciário. O grande apreço e admiração por essa área nos
